11/12/10 implement shape factory for capacitor, handle object occlusion via shape subtraction
11/12/10 move code for box shapes into BoxShapeFactory, use in BoxNode
11/12/10 remove MVT.modelToModel(Point3D), no longer needed since all Shape creation is in view coordinate frame
11/12/10 change all Shape generation to use global *view* coordinate frame, view needs this for rendering, model doesn't care for Shape intersection
11/12/10 provide MVT to model elements, for 2D shape generation in model coordinates
11/12/10 add method in MVT for "flattening" a 3D model point to a 2D point, still in model coordinates
11/12/10 use consistent labeling of points for defining 3D box faces
# 0.00.42 (46037) Nov 12, 2010
11/12/10 make charges bolder
# 0.00.41 (46029) Nov 12, 2010
11/12/10 use a non-linear relationship for showing total charge on dielectric, so that changes are clearly visible with battery voltages
11/12/10 hide debug nodes when voltmeter is hidden
# 0.00.40 (46011) Nov 11, 2010
11/11/10 dev version to demonstrate shape-based voltmeter probes
11/11/10 move responsibility for debug shape rendering into ShapesDebugNode and out of general nodes, all shape generation can now be in world coordinate frame
11/11/10 move all Shape creation stuff out of the model and into factories, usable by both model and view
11/11/10 add constant for MODEL_BOUNDS_STROKE
11/11/10 don't try to constrain locations unless !World.isBoundsEmpty
11/11/10 use intersects(Shape) instead of contains(Point2D) for voltmeter probes
11/11/10 test for shape intersection between wires and voltmeter probes
11/11/10 make voltmeter read 0V when probes are touching
11/11/10 add shapes for voltmeter probe tips
11/11/10 add infrastructure for touching voltmeter probe tips together to display 0V
11/11/10 specializations of Wire for connecting a battery to a capacitor
11/11/10 specializations of WireSegment for connection to battery and capacitor, length changes dynamically